Fixed Typo on ESS Page

--- a/PeopleSoft/src/main/webapp/index.xhtml
+++ b/PeopleSoft/src/main/webapp/index.xhtml
@@ -60,7 +60,7 @@
             </pm:content>
         </pm:view>
         <pm:view id="mss">
-            <pm:header title="Pooranata">            
+            <pm:header title="Poornata">            
                 <f:facet name="left">
                     <p:button value="Back" icon="back" href="#main?transition=reverse slide"/>
                 </f:facet>
